<resources>
    <string name="app_name">Movies</string>
    <string name="movies">Movies</string>
    <string name="txt_no_search_parameters">OOPS! NOTHING IS HERE\nSET THE SEARCH PARAMETERS</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="txt_no_movies">NO MOVIES FOUND FOR THE QUERY\nTRY CHANGING THE QUERY</string>
    <string name="invalid_query">INVALID TITLE INSERTED\nNO DATA FOUND FOR THE TITLE</string>
    <string name="internet_error">LOOKS LIKE YOU ARE DISCONNECTED\nPLEASE, CHECK YOUR INTERNET CONNECTION</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="apply">Apply</string>
    <string name="fill_field">This field should not be empty</string>
    <string name="enter_valid_number">Please, enter a valid number</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="movie_info">Movie Info</string>
    <string name="imdb">IMDb</string>
    <string name="comments">Comments</string>
    <string name="leave_comment">Leave comment</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="error_occurred">Error Occurred</string>
</resources>