<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_arrow"
            app:title="@string/movie_info"
            app:titleCentered="true"
            app:titleTextAppearance="@style/CustomToolBarTextAppearance"
            app:titleTextColor="@color/title_color" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/title_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="@id/img_poster"
                tools:text="Movie title" />

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/txt_title"
                app:layout_constraintStart_toStartOf="@id/txt_title"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                tools:text="2010" />

            <TextView
                android:id="@+id/tct_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/txt_year"
                app:layout_constraintStart_toStartOf="@id/txt_year"
                app:layout_constraintTop_toBottomOf="@id/txt_year"
                tools:text="Movie" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_corner_rounded"
                android:clickable="true"
                android:contentDescription="@string/toggle_favorite"
                android:drawablePadding="6dp"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="6dp"
                android:text="@string/imdb"
                app:drawableStartCompat="@drawable/ic_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_favorite" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/toggle_favorite"
                android:src="@drawable/ic_like_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comments"
        android:textColor="@color/title_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/detail_container"
        app:layout_constraintTop_toBottomOf="@id/detail_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_comments" />
</androidx.constraintlayout.widget.ConstraintLayout>